--- a/scenes/ranger-tower.html
+++ b/scenes/ranger-tower.html
@@ -21,7 +21,7 @@
             As you approach the tower thing radio starts to beep.
         </p>
         <label for="step-4" class="next-btn">Answer the radio</label>
-     </div>
+    </div>
 
     <input type="checkbox" id="step-4" class="story-toggle">
     <div class="hidden-content story-block">
@@ -116,7 +116,7 @@
         <div class="radio-msg">
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
-                “You don't know it, but it's you're now the gate kipper of the forest”
+                “You don't know it, but you're now the gate kipper of the forest”
             </span>
         </div>
 
@@ -124,10 +124,10 @@
 
         <div class="choice-container">
             <a href="take-locket.html" class="btn">Ignore the Radio and Take the Locket (Break the seal & Collect Pay)</a>
-            <a href="investigate-map-further.html" class="btn">Copy the Map coordinates and Start Your Journey</a>
+            <a href="chapter-2.html" class="btn">Copy the Map coordinates and Start Your Journey</a>
         </div>
     </div>
-    </div>
+
 
 
 </main>
