--- a/scenes/take-locket.html
+++ b/scenes/take-locket.html
@@ -21,12 +21,12 @@
     <h1>BREACH: CONTAINMENT FAILURE</h1>
 
     <div class="hud-text">
-        PAYOUT: <span class="status-stable">$500 (COLLECTED)</span> | SANITY: <span class="status-danger">5% (CRITICAL)</span>
+        PAYOUT: <span class="status-stable">$500 (COLLECTED)</span> | SANITY: <span class="status-danger">25% (CRITICAL)</span>
     </div>
 
     <div class="story-block">
         <p>
-            The $500 payout is too much to ignore. The ranger's warnings were probably just paranoia. You wrap the silver locket in your handkerchief and secure it deep in your inner pocket.
+            The $500 payout is too much to ignore. The radio's warnings were probably just paranoia. You wrap the silver locket in your handkerchief and secure it deep in your inner pocket.
         </p>
         <p>
             *CLICK*
@@ -94,15 +94,16 @@
                 You get scared. “How does it know my name?”
             </p>
             <p>
-                Every thing turn to darkness. you are not leveing the forest.
+                Every thing turn to darkness. you are not leaving the forest.
             </p>
             <p class="char-name glitch-text" style="text-align: center; font-size: 35px "> You are Part of The Forest Now</p>
 
+            <div class="choice-container">
+                <a href="../index.html" class="btn btn-abort">Exit</a>
+            </div>
         </div>
 
-        <div class="choice-container">
-            <a href="../scenes/van-interior.html?payout=500" class="btn btn-abort">JUMP FROM TOWER & RUN (Emergency Exit)</a>
-        </div>
+
     </div>
 
 </main>
