--- a/scenes/radio-failure.html
+++ b/scenes/radio-failure.html
@@ -60,7 +60,7 @@
         <div class="radio-msg" style="border-color: red; background: rgba(50,0,0,0.5);">
             <p class="char-name glitch-text">Y O U</p>
             <span class="char-talk glitch-text">
-                    WHO IS THIS? WHO IS THIS? WHO IS THIS?
+                    WHO IS THIS?.... WHO IS THIS? .....WHO IS THIS?
                 </span>
         </div>
         <p>
