--- a/scenes/ranger-path.html
+++ b/scenes/ranger-path.html
@@ -51,7 +51,7 @@
                 Like a heartbeat.
             </p>
             <div class="choice-container">
-                <a href="ranger-path.html" class="btn">Proceed cautiously</a>
+                <a href="ranger-tower.html" class="btn">Proceed cautiously</a>
                 <a href="talk-to-the-radio.html" class="btn">Try to call out on the radio</a>
                 <a href="the-clearing.html" class="btn btn-abort" onclick="animateAndRedirect('the-clearing.html')">Retreat to the clearing</a>
             </div>
