--- a/scenes/ranger-tower.html
+++ b/scenes/ranger-tower.html
@@ -64,7 +64,7 @@
 
     <input type="checkbox" id="step-2" class="story-toggle">
     <div class="hidden-content story-block">
-        <div class="clue-item">
+        <div class="clue-item btn-pulse">
             <strong>ITEM ACQUIRED: SILVER LOCKET</strong><br>
             <em>Inscription: 44°N - The Singing Tree</em>
         </div>
@@ -123,7 +123,7 @@
 
 
         <div class="choice-container">
-            <a href="take-locket.html" class="btn">Ignore the Radio and Take the Locket (Break the seal & Collect Pay)</a>
+            <a href="take-locket.html" class="btn btn-abort">Ignore the Radio and Take the Locket (Break the seal & Collect Pay)</a>
             <a href="chapter-2.html" class="btn">Copy the Map coordinates and Start Your Journey</a>
         </div>
     </div>
