--- a/scenes/ranger-tower.html
+++ b/scenes/ranger-tower.html
@@ -28,14 +28,14 @@
         <div class="radio-msg">
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
-                “Where are, are you there yet?”
+                “Get in quickly, and look at the wall with the map of the valley.”
             </span>
         </div>
         <div class="radio-msg">
             <p class="char-name">You:</p>
 
             <span class="char-talk">
-                “Ya, I'm getting in the tower, I run as fast as I can”
+                “Okay… I’m getting in”
             </span>
         </div>
         <p>
