--- a/scenes/take-locket.html
+++ b/scenes/take-locket.html
@@ -85,7 +85,7 @@
                 Everything starts to fade. Before you know it you hear a loud laughter,
             </p>
             <div class="radio-msg">
-                <p class="char-name">Unknow ???:</p>
+                <p class="char-name">Unknowe ???:</p>
                 <span class="char-talk">
                     “Thank you, David Thank you!.... ”
                 </span>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="choice-container">
-            <a href="../scenes/van-interior.html?payout=500" class="btn btn-abort">JUMP FROM TOWER & RUN (Emergency Exit)</a>
+            <a href="../index.html" class="btn btn-abort">Return Back</a>
         </div>
     </div>
 
