--- a/scenes/inspect-stump.html
+++ b/scenes/inspect-stump.html
@@ -81,7 +81,7 @@
 
         <div class="choice-container">
             <a href="ranger-path.html" class="btn">Get up and run toward the Tower</a>
-            <a href="../scenes/van-interior.html" class="btn btn-abort">Too dangerous. Leave. (Abort)</a>
+            <a href="../scenes/van-interior.html" class="btn btn-abort">Too dangerous. Leave.</a>
         </div>
     </div>
 
