--- a/scenes/radio-failure.html
+++ b/scenes/radio-failure.html
@@ -70,7 +70,7 @@
         <p class="char-name glitch-text" style="text-align: center; font-size: 35px ">The Static has you</p>
 
         <div class="choice-container">
-            <a href="../scenes/van-interior.html" class="btn btn-abort">WAKE UP SCREAMING (Emergency Extraction)</a>
+            <a href="../scenes/van-interior.html" class="btn btn-abort">WAKE UP SCREAMING (Restart)</a>
         </div>
     </div>
 
