--- a/scenes/ranger-tower.html
+++ b/scenes/ranger-tower.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tower 4 Interior</title>
+    <title>Tower 4 </title>
     <link rel="stylesheet" href="../style.css">
+    <style>
+        .btn-pulse:hover{
+            background: rgba(177, 131, 15, 0.3);
+        }
+    </style>
 </head>
 <body>
 
 
+<audio autoplay loop>
+    <source src="../thingsUsed/ranger-tower.wav" type="audio/wav">
+</audio>
 <div class="fog-layer"></div>
 <main class="game-container">
     <h1>Location: Tower 4</h1>
@@ -116,7 +124,7 @@
         <div class="radio-msg">
             <p class="char-name">RADIO (104.5):</p>
             <span class="char-talk">
-                “You don't know it, but you're now the gate kipper of the forest”
+                “You can make every thing right.”
             </span>
         </div>
 
