--- a/scenes/take-locket.html
+++ b/scenes/take-locket.html
@@ -99,7 +99,7 @@
             <p class="char-name glitch-text" style="text-align: center; font-size: 35px "> You are Part of The Forest Now</p>
 
             <div class="choice-container">
-                <a href="../index.html" class="btn btn-abort">Exit</a>
+                <a href="van-interior.html" class="btn btn-abort">WAKE UP SCREAMING (Restart)</a>
             </div>
         </div>
 
