--- a/scenes/ranger-tower.html
+++ b/scenes/ranger-tower.html
@@ -26,7 +26,7 @@
 
     <div class="story-block">
         <p>
-            As you approach the tower thing radio starts to beep.
+            As you approach the tower, the radio starts to beep.
         </p>
         <label for="step-4" class="next-btn">Answer the radio</label>
     </div>
